--- a/docs/Beispieldokumentation.adoc
+++ b/docs/Beispieldokumentation.adoc
@@ -28,3 +28,21 @@ Dieses Dokument dient im Praktikum als Spielwiese für das Kennenlernen und prak
     Step 2a
     Step 2b
 3. Step 3
+
+=== Tabellen und Textformatierung
+.Textformatierung
+[cols="1,1,3"]
+|===
+|Formatierung | Syntax | Beschreibung 
+| bold | *bold* | fetter text 
+| italic | _italic_ | kursiver Text 
+| monospace | `monospace` | text mit fester Laufweise 
+| bolditalic | *_bolditalic_* | Text mit kombinierter  Formatierung 
+| bolditalic | **bold**__italic__ | Text mit Formatierung innerhalb eines Wortes
+| mark | #mark# | markierter Text  
+|===
+
+=== Software Engineering - Word Formatierung
+|=== 
+
+|===
