--- a/docs/Beispieldokumentation.adoc
+++ b/docs/Beispieldokumentation.adoc
@@ -43,6 +43,5 @@ Dieses Dokument dient im Praktikum als Spielwiese für das Kennenlernen und prak
 |===
 
 === Software Engineering - Word Formatierung
-|=== 
+**S**__o__ftware **E**ng__i__nee#r_i_ng#
 
-|===
